<resources>
    <string name="app_name">Just Meditate</string>
    <string name="select_meditation_time">Select meditation time</string>
    <string name="start_meditation">Start meditation</string>
    <string name="divider">:</string>
    <string name="select_ambience">Select ambience</string>
    <string name="none">None</string>
    <string name="spring">Spring</string>
    <string name="fireplace">Fireplace</string>
    <string name="stop_meditation">Stop meditation</string>
    <string name="pause">Pause</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="finished">Finished!</string>
    <string name="go_back">Go back</string>
    <string name="resume">Resume</string>
</resources>