<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/select_meditation_time"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/picker_minute" />
    <NumberPicker
        android:id="@+id/picker_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/picker_minute"
        app:layout_constraintBottom_toTopOf="@id/button_start"/>
    <NumberPicker
        android:id="@+id/picker_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_start"/>
    <NumberPicker
        android:id="@+id/picker_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/picker_minute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_start"/>
    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_meditation"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divider"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="@id/picker_minute"
        app:layout_constraintBottom_toBottomOf="@id/picker_minute"
        app:layout_constraintStart_toEndOf="@id/picker_hour"
        app:layout_constraintEnd_toStartOf="@id/picker_minute"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divider"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="@id/picker_minute"
        app:layout_constraintBottom_toBottomOf="@id/picker_minute"
        app:layout_constraintStart_toEndOf="@id/picker_minute"
        app:layout_constraintEnd_toStartOf="@id/picker_second"/>

    <TextView
        android:id="@+id/ambience_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_ambience"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_start"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/radio_button_empty"
        app:layout_constraintTop_toBottomOf="@id/ambience_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
            android:id="@+id/radio_button_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/none"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/radio_button_grass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/spring"

            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/radio_button_fire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/fireplace"
            android:layout_weight="1"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>